<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/_2sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_8sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:orientation="vertical"
                app:cardCornerRadius="@dimen/_3sdp"
                app:cardElevation="@dimen/_2sdp">

                <ImageView
                    android:id="@+id/image_view"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/tempat_makan" />

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_3sdp"
                    android:text="@string/name_product"
                    android:textStyle="bold"
                    android:textSize="@dimen/_11ssp" />

                <TextView
                    android:id="@+id/tv_saran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_3sdp"
                    android:text="@string/stock"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_product"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_70sdp"
                android:textSize="@dimen/_11ssp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_gravity="bottom"
            android:background="@color/gray3" />

    </androidx.cardview.widget.CardView>

</androidx.cardview.widget.CardView>